--- a/assets/foodshelves/lang/ja.json
+++ b/assets/foodshelves/lang/ja.json
@@ -49,6 +49,7 @@
   "blockdesc-fooduniversal-text": "  - パイ、チーズ、すべてのパンタイプ<br>拡張食品：<br>  - マフィン<br>  - 餃子。",
   "blockdesc-holderuniversal-text": "  -パイ、チーズ、すべてのパンの種類、クロックとポット<br>拡張食品:<br>  -マフィン<br>  -餃子<br>ワイルドクラフト: フルーツとナッツ:<br>  -パソカ<br>  -ハルヴァ<br>  -マジパン",
 
+  "helddesc-breadshelf": "この棚に置いたパンは鮮度が2倍長持ちします。",
   "helddesc-barrelrack": "この樽ラックに保存された液体は50%長持ちし、熟成が20%遅くなります。",
   "helddesc-barrelrackbig": "この大型樽ラックに保存された液体は60%長持ちし、熟成が25%遅くなります。",
   "helddesc-ceilingjar": "天井ジャーに置かれた乾燥フルーツは2.5倍速く乾燥または溶け、25%長持ちします。",
