--- a/assets/foodshelves/lang/pl.json
+++ b/assets/foodshelves/lang/pl.json
@@ -49,6 +49,7 @@
   "blockdesc-fooduniversal-text": "  -Ciasta, sery, wszystkie rodzaje chleba<br>Rozszerzone jedzenie:<br>  -Muffiny<br>  -Pierogi.",
   "blockdesc-holderuniversal-text": "  -Ciasta, sery, wszystkie rodzaje chleba, garnki i dzbanki<br>Rozszerzona Żywność:<br>  -Babeczki<br>  -Pierożki<br>Wildcraft: Owoce i Orzechy:<br>  -Paçoca<br>  -Halva<br>  -Marcepan",
 
+  "helddesc-breadshelf": "Chleb umieszczony na tej półce pozostaje świeży o 100% dłużej.",
   "helddesc-barrelrack": "Płyny przechowywane w tym stojaku na beczki pozostają świeże o 50% dłużej i dojrzewają o 20% wolniej.",
   "helddesc-barrelrackbig": "Płyny przechowywane w tym dużym stojaku na beczki pozostają świeże o 60% dłużej i dojrzewają o 25% wolniej.",
   "helddesc-ceilingjar": "Suszone owoce umieszczone w Słoju Sufitowym schną lub topnieją 2,5x szybciej i pozostają świeże o 25% dłużej.",
