--- a/assets/foodshelves/lang/pt-br.json
+++ b/assets/foodshelves/lang/pt-br.json
@@ -49,6 +49,7 @@
   "blockdesc-fooduniversal-text": "  - Tortas, queijos, todos os tipos de pão<br>Comidas ampliadas:<br>  - Muffins<br>  - Empanadas.",
   "blockdesc-holderuniversal-text": "  -Tortas, queijos, todos os tipos de pão, panelas e potes<br>Alimentos Expandidos:<br>  -Muffins<br>  -Bolinhos<br>Wildcraft: Frutas e Nozes:<br>  -Paçoca<br>  -Halva<br>  -Marzipã",
 
+  "helddesc-breadshelf": "O pão colocado nesta prateleira permanece fresco por 100% mais tempo.",
   "helddesc-barrelrack": "Os líquidos armazenados neste suporte de barris permanecem frescos 50% mais tempo e curam 20% mais lentamente.",
   "helddesc-barrelrackbig": "Os líquidos armazenados neste grande suporte de barris permanecem frescos 60% mais tempo e curam 25% mais lentamente.",
   "helddesc-ceilingjar": "Frutas desidratadas colocadas no Pote de Teto secam ou derretem 2,5x mais rápido e permanecem frescas 25% mais tempo.",
