--- a/assets/foodshelves/lang/ru.json
+++ b/assets/foodshelves/lang/ru.json
@@ -49,6 +49,7 @@
   "blockdesc-fooduniversal-text": "  - Пироги, сыры, все виды хлеба<br>Расширенные продукты:<br>  - Маффины<br>  - Пельмени.",
   "blockdesc-holderuniversal-text": "  -Пироги, сыр, все виды хлеба, горшки и кувшины<br>Дополнительные продукты:<br>  -Маффины<br>  -Пельмени<br>Wildcraft: Фрукты и Орехи:<br>  -Пасока<br>  -Халва<br>  -Марципан",
 
+  "helddesc-breadshelf": "Хлеб, помещённый на эту полку, остаётся свежим в 2 раза дольше.",
   "helddesc-barrelrack": "Жидкости, хранящиеся в этой стойке для бочек, остаются свежими на 50% дольше и созревают на 20% медленнее.",
   "helddesc-barrelrackbig": "Жидкости, хранящиеся в этой большой стойке для бочек, остаются свежими на 60% дольше и созревают на 25% медленнее.",
   "helddesc-ceilingjar": "Высушенные фрукты, помещенные в Потолочную банку, сушатся или тают в 2,5 раза быстрее и остаются свежими на 25% дольше.",
