--- a/assets/foodshelves/lang/sr.json
+++ b/assets/foodshelves/lang/sr.json
@@ -45,6 +45,7 @@
   "blockdesc-fooduniversal-text": "  -Пите, Сир, сви типови хлеба<br>Проширена Храна:<br>  -Мафини<br>  -кифле.",
   "blockdesc-holderuniversal-text": "  -Пите, сиреви, све врсте хлеба, лонци и тегле<br>Проширена храна:<br>  -Мафини<br>  -Кнедле<br>Wildcraft: Воће и Орашасти плодови:<br>  -Пацока<br>  -Халва<br>  -Марципан",
 
+  "helddesc-breadshelf": "Хлеб који је постављен на ову сталажу траје 100% дуже.",
   "helddesc-barrelrack": "Течности ускладиштене у овом носачу за буре остају свеже 50% дуже и сазревају 20% спорије.",
   "helddesc-barrelrackbig": "Течности ускладиштене у овом великом носачу за буре остају свеже 60% дуже и сазревају 25% спорије.",
   "helddesc-ceilingjar": "Сушено воће у Плафонској тегли суши се или топи 2,5x брже и остаје свеже 25% дуже.",
