--- a/assets/foodshelves/lang/uk.json
+++ b/assets/foodshelves/lang/uk.json
@@ -49,6 +49,7 @@
   "blockdesc-fooduniversal-text": "  - Пироги, сири, усі види хліба<br>Розширені продукти:<br>  - Мафіни<br>  - Кнедлики.",
   "blockdesc-holderuniversal-text": "  -Пироги, сир, усі види хліба, горщики та глечики<br>Розширені продукти:<br>  -Маффіни<br>  -Кнедлики<br>Wildcraft: Фрукти та Горіхи:<br>  -Пасока<br>  -Халва<br>  -Марципан",
 
+  "helddesc-breadshelf": "Хліб, покладений на цю полицю, залишається свіжим у 2 рази довше.",
   "helddesc-barrelrack": "Рідини, що зберігаються в цій стійці для бочок, залишаються свіжими на 50% довше і дозрівають на 20% повільніше.",
   "helddesc-barrelrackbig": "Рідини, що зберігаються у цій великій стійці для бочок, залишаються свіжими на 60% довше і дозрівають на 25% повільніше.",
   "helddesc-ceilingjar": "Сушені фрукти, поміщені в стельову банку, висихають або тануть у 2,5 раза швидше і залишаються свіжими на 25% довше.",
