--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -27,8 +27,8 @@
   "block-firkinrack-*": "Firkin rack",
   "block-firkin*": "Firkin",
   "block-pumpkincase-*": "Pumpkin Case",
-  "block-glassfoodblock-*": "Glass Food Block",
-  "block-glassfoodcase-*": "Glass Food Case",
+  "block-fooddisplayblock-*": "Food Display Block",
+  "block-fooddisplaycase-*": "Food Display Case",
   "block-glassjar-*": "Glass Jar",
   "block-ceilingjar-*": "Ceiling Jar",
   "block-coolingcabinet-*": "Cooling Cabinet",
@@ -48,7 +48,7 @@
   "blockdesc-barrelrack-text": "  -Barrels. These barrels can only hold liquids.",
   "blockdesc-barrelrackbig-text": "  -Big horizontal barrels. These barrels can only hold liquids.",
   "blockdesc-horizontalbarrelbig-text": "  -This barrel can only be placed inside a big barrel rack.",
-  "blockdesc-liquidystuff-text": "  -Resin, beeswax, animal fat<br>  -All dehydrated/dry fruits from Expanded Foods.",
+  "blockdesc-liquidystuff-text": "  -Grain, resin, beeswax, animal fat<br>  -All dehydrated/dry fruits from Expanded Foods.",
   "blockdesc-pumpkincase-text": "  -Pumpkins.",
   "blockdesc-fooduniversal-text": "  -Pies, Cheese, all bread types<br>Expanded Foods:<br>  -Muffins<br>  -Dumplings<br>  -Soft bread",
   "blockdesc-holderuniversal-text": "  -Pies, Cheese, all bread types, crocks and pots<br>Food Shelves:<br>  -All baskets<br>Expanded Foods:<br>  -Muffins<br>  -Dumplings<br>  -Soft bread<br>Wildcraft: Fruits and Nuts:<br>  -Pacoca<br>  -Halva<br>  -Marzipam",
@@ -56,8 +56,8 @@
   "helddesc-breadshelf": "Bread placed on this shelf stays fresh for 100% longer.",
   "helddesc-barrelrack": "Liquids stored in this Barrel rack stay fresh for 50% longer and cure 20% slower.",
   "helddesc-barrelrackbig": "Liquids stored in this Big barrel rack stay fresh for 60% longer and cure 25% slower.",
-  "helddesc-ceilingjar": "Dehydrated fruit placed in the Ceiling Jar dries or melts 2.5x faster, and stays fresh for 25% longer.",
-  "helddesc-glassfoodcase": "Food placed in this case stays fresh for 25% longer.",
+  "helddesc-ceilingjar": "Dehydrated fruit placed in the Ceiling Jar dries or melts 2.5x faster, and stays fresh for 25% longer. Grain stored in it is fresh for 35% longer than in a Storage Vessel.",
+  "helddesc-fooddisplaycase": "Food placed in this case stays fresh for 25% longer.",
   "helddesc-coolingcabinet": "Food stored in this cabinet stays fresh 25% longer, or up to 60% longer when ice is added.<br>Make sure to keep it closed!",
 
   "This item cannot be placed in this container.": "This item cannot be placed in this container.",
@@ -84,6 +84,7 @@
   "Empty.": "Empty.",
   "short": "Short",
   "veryshort": "Very Short",
+  "top": "Top",
 
   "Will melt in {0} years": "Will melt in {0} years",
   "Will melt in {0} days": "Will melt in {0} days",
