--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -22,7 +22,7 @@
   "block-tablewshelf-redmarble-*": "Pink marble-topped table with a shelf",
   "block-tablewshelf-greenmarble-*": "Green marble-topped table with a shelf",
   "block-barrelrack-*": "Barrel rack",
-  "block-horizontalbarrelbig-*": "Big horizontal barrel",
+  "block-tun-*": "Tun",
   "block-barrelrackbig-*": "Big barrel rack",
   "block-firkinrack-*": "Firkin rack",
   "block-firkin*": "Firkin",
@@ -47,7 +47,7 @@
   "blockdesc-vegetablebasket-text": "  -Most vegetables",
   "blockdesc-barrelrack-text": "  -Barrels. These barrels can only hold liquids.",
   "blockdesc-barrelrackbig-text": "  -Big horizontal barrels. These barrels can only hold liquids.",
-  "blockdesc-horizontalbarrelbig-text": "  -This barrel can only be placed inside a big barrel rack.",
+  "blockdesc-tun-text": "  -This tun can only be placed inside a tun rack.",
   "blockdesc-liquidystuff-text": "  -Grain, resin, beeswax, animal fat<br>  -All dehydrated/dry fruits from Expanded Foods.",
   "blockdesc-pumpkincase-text": "  -Pumpkins.",
   "blockdesc-fooduniversal-text": "  -Pies, Cheese, all bread types<br>Expanded Foods:<br>  -Muffins<br>  -Dumplings<br>  -Soft bread",
