--- a/assets/foodshelves/lang/zn-cn.json
+++ b/assets/foodshelves/lang/zn-cn.json
@@ -19,13 +19,13 @@
   "block-tablewshelf-redmarble-*": "带架子的粉色大理石桌",
   "block-tablewshelf-greenmarble-*": "带架子的绿色大理石桌",
   "block-barrelrack-*": "桶架",
-  "block-horizontalbarrelbig-*": "大横桶",
-  "block-barrelrackbig-*": "大桶架",
+  "block-tun-*": "大横桶",
+  "block-tunrack-*": "大桶架",
   "block-firkinrack-*": "小桶架",
   "block-firkin*": "小桶",
   "block-pumpkincase-*": "南瓜盒",
-  "block-glassfoodblock-*": "玻璃食物块",
-  "block-glassfoodcase-*": "玻璃食物盒",
+  "block-fooddisplayblock-*": "玻璃食物块",
+  "block-fooddisplaycase-*": "玻璃食物盒",
   "block-glassjar-*": "玻璃罐",
   "block-ceilingjar-*": "天花板罐",
   "block-coolingcabinet-*": "冷柜",
@@ -42,8 +42,8 @@
   "blockdesc-fruitbasket-text": "-各种水果",
   "blockdesc-vegetablebasket-text": "-大多数蔬菜",
   "blockdesc-barrelrack-text": "-只能装桶。这些桶只能装液体.",
-  "blockdesc-barrelrackbig-text": "-只能容纳大的横桶。这些桶只能装液体.",
-  "blockdesc-horizontalbarrelbig-text": "-这种桶只能放在大桶架内.",
+  "blockdesc-tunrack-text": "-只能容纳大的横桶。这些桶只能装液体.",
+  "blockdesc-tun-text": "-这种桶只能放在大桶架内.",
   "blockdesc-liquidystuff-text": "  -可容纳树脂、蜂蜡、动物脂肪和所有来自食品扩展的脱水/干燥水果。",
   "blockdesc-pumpkincase-text": "  -只能装南瓜。",
   "blockdesc-fooduniversal-text": "  -馅饼、奶酪、所有面包类型<br>扩展食品：<br>-松饼<br>-饺子",
@@ -51,9 +51,9 @@
 
   "helddesc-breadshelf": "放在这个架子上的面包能保持新鲜时间延长100%。",
   "helddesc-barrelrack": "储存在这种桶架中的液体保鲜时间延长 50%，固化速度降低 20%。",
-  "helddesc-barrelrackbig": "储存在这种大桶架中的液体保鲜时间延长 60%，固化速度降低 25%。",
+  "helddesc-tunrack": "储存在这种大桶架中的液体保鲜时间延长 60%，固化速度降低 25%。",
   "helddesc-ceilingjar": "放在天花板罐中的脱水水果的干燥或融化速度是原来的 2.5 倍，保鲜时间延长 25%。",
-  "helddesc-glassfoodcase": "放在这个箱子里的食物保鲜期可延长 25%。",
+  "helddesc-fooddisplaycase": "放在这个箱子里的食物保鲜期可延长 25%。",
   "helddesc-coolingcabinet": "储存在这个橱柜中的食物保鲜时间可延长 25%，加冰后保鲜时间可延长 60%！",
 
   "This item cannot be placed in this container.": "此物品不能放入此容器中。",
@@ -86,9 +86,6 @@
   "Will melt in {0} hours": "将在{0}小时内融化",
   "Will not melt": "不会融化",
 
-  "Average perish rate {0} years": "平均腐烂速度：{0}年",
-  "Average perish rate {0} days": "平均腐烂速度：{0}天",
-  "Average perish rate {0} hours": "平均腐烂速度：{0}小时",
   "will perish in {0} years": "将在{0}年后腐烂",
   "will perish in {0} days": "将在{0}天后腐烂",
   "will perish in {0} hours": "将在{0}小时后腐烂",
