--- a/assets/foodshelves/lang/zn-cn.json
+++ b/assets/foodshelves/lang/zn-cn.json
@@ -1,94 +1,116 @@
 {
-  "game:tabname-foodshelves": "食品架子",
+  "game:tabname-foodshelves": "食物架子",
 
-  "foodshelvesserver": "食品架子服务器",
+  "foodshelvesserver": "食物架服务器",
 
+  "item-cutice": "冰砖",
+
+  "block-shortshelf-*": "矮脚架",
   "block-pieshelf-*": "馅饼/奶酪架",
   "block-breadshelf-*": "面包架",
-  "block-barshelf-*": "棒架",
+  "block-barshelf-*": "食物棒架",
   "block-sushishelf-*": "寿司架",
-  "block-eggshelf-*": "蛋架",
-  "block-seedshelf-*": "种子架",
-  "block-glassjarshelf-*": "玻璃瓶架",
+  "block-eggshelf-*": "鸡蛋架",
+  "block-seedshelf-*": "种子袋架",
+  "block-glassjarshelf-*": "玻璃罐架",
   "block-fruitbasket-*": "水果篮",
   "block-vegetablebasket-*": "蔬菜篮",
-  "block-eggbasket-*": "蛋篮",
-  "block-tablewshelf-normal-*": "带架子的木桌",
-  "block-tablewshelf-aged-*": "带架子的陈旧桌子",
-  "block-tablewshelf-whitemarble-*": "带架子的白色大理石桌",
-  "block-tablewshelf-redmarble-*": "带架子的粉色大理石桌",
-  "block-tablewshelf-greenmarble-*": "带架子的绿色大理石桌",
-  "block-barrelrack-*": "桶架",
-  "block-tun-*": "大横桶",
-  "block-tunrack-*": "大桶架",
-  "block-firkinrack-*": "小桶架",
-  "block-firkin*": "小桶",
-  "block-pumpkincase-*": "南瓜盒",
-  "block-fooddisplayblock-*": "玻璃食物块",
-  "block-fooddisplaycase-*": "玻璃食物盒",
+  "block-eggbasket-*": "鸡蛋篮",
+  "block-tablewshelf-normal-*": "带架木桌",
+  "block-tablewshelf-aged-*": "带架旧木桌",
+  "block-tablewshelf-whitemarble-*": "带架白大理石面木桌",
+  "block-tablewshelf-redmarble-*": "带架粉红大理石面木桌",
+  "block-tablewshelf-greenmarble-*": "带架绿大理石面木桌",
+  "block-barrelrack-*": "木桶架",
+  "block-tun-*": "酿酒缸",
+  "block-tunrack-*": "酿酒缸架",
+  "block-firkinrack-*": "酒桶架",
+  "block-firkin*": "酒桶",
+  "block-pumpkincase-*": "南瓜箱",
+  "block-fooddisplayblock-*": "食物展示台",
+  "block-fooddisplaycase-*": "食物展示柜",
   "block-glassjar-*": "玻璃罐",
-  "block-ceilingjar-*": "天花板罐",
-  "block-coolingcabinet-*": "冷柜",
+  "block-ceilingjar-*": "吊顶罐",
+  "block-coolingcabinet-*": "冷藏柜",
 
-  "blockdesc-canhold-title": "可以容纳：",
-  "blockdesc-canbeplacedin-title": "可以放置在：",
-  "blockdesc-breadshelf-text": "-所有类型的面包<br>食品扩展：<br>-松饼<br>-饺子<br>野生工艺：水果和坚果：<br>-花生酥<br>-炸蔬菜丸子<br>-杏仁膏",
-  "blockdesc-eggshelf-text": "-生鸡蛋或煮鸡蛋",
-  "blockdesc-sushishelf-text": "食品扩展：<br>-所有寿司",
-  "blockdesc-barshelf-text": "食品扩展：<br>-水果棒<br>野生工艺：水果和坚果：<br>所有食品棒",
-  "blockdesc-pieshelf-text": "-任何馅饼或奶酪",
-  "blockdesc-seedshelf-text": "-所有种子袋",
-  "blockdesc-tablewshelf-text": "-任何可以放在原版架上的东西",
-  "blockdesc-fruitbasket-text": "-各种水果",
-  "blockdesc-vegetablebasket-text": "-大多数蔬菜",
-  "blockdesc-barrelrack-text": "-只能装桶。这些桶只能装液体.",
-  "blockdesc-tunrack-text": "-只能容纳大的横桶。这些桶只能装液体.",
-  "blockdesc-tun-text": "-这种桶只能放在大桶架内.",
-  "blockdesc-liquidystuff-text": "  -可容纳树脂、蜂蜡、动物脂肪和所有来自食品扩展的脱水/干燥水果。",
-  "blockdesc-pumpkincase-text": "  -只能装南瓜。",
-  "blockdesc-fooduniversal-text": "  -馅饼、奶酪、所有面包类型<br>扩展食品：<br>-松饼<br>-饺子",
-  "blockdesc-holderuniversal-text": "-馅饼、奶酪、各种面包、陶罐和壶<br>食品扩展<br>-松饼<br>-饺子<br>野生工艺：水果和坚果<br>-坚果糖<br>-酥糖<br>-杏仁蛋白软糖",
+  "blockdesc-canhold-title": "可存放：",
+  "blockdesc-canbeplacedin-title": "可放置于：",
 
-  "helddesc-breadshelf": "放在这个架子上的面包能保持新鲜时间延长100%。",
-  "helddesc-barrelrack": "储存在这种桶架中的液体保鲜时间延长 50%，固化速度降低 20%。",
-  "helddesc-tunrack": "储存在这种大桶架中的液体保鲜时间延长 60%，固化速度降低 25%。",
-  "helddesc-ceilingjar": "放在天花板罐中的脱水水果的干燥或融化速度是原来的 2.5 倍，保鲜时间延长 25%。",
-  "helddesc-fooddisplaycase": "放在这个箱子里的食物保鲜期可延长 25%。",
-  "helddesc-coolingcabinet": "储存在这个橱柜中的食物保鲜时间可延长 25%，加冰后保鲜时间可延长 60%！",
+  "blockdesc-breadshelf-text": "  - 所有面包类型<br>食品扩展：<br>  - 松饼<br>  - 饺子<br>  - 软面包<br>荒野工艺：水果与坚果：<br>  - 花生酥<br>  - 炸蔬菜丸子<br>  - 杏仁糖膏",
+  "blockdesc-eggshelf-text": "  - 生鸡蛋或煮鸡蛋",
+  "blockdesc-sushishelf-text": "食品扩展：<br>  - 所有寿司",
+  "blockdesc-barshelf-text": "食品扩展：<br>  - 水果棒<br>荒野工艺：水果与坚果：<br>  - 所有食物棒",
+  "blockdesc-pieshelf-text": "  - 任何馅饼或奶酪",
+  "blockdesc-seedshelf-text": "  - 任何种子袋",
+  "blockdesc-tablewshelf-text": "  - 任何可以放在原版架子上的物品",
+  "blockdesc-fruitbasket-text": "  - 所有类型的水果",
+  "blockdesc-vegetablebasket-text": "  - 大部分蔬菜",
+  "blockdesc-barrelrack-text": "  - 木桶。这些木桶只能装液体。",
+  "blockdesc-tunrack-text": "  - 酿酒缸。这些酿酒缸只能装液体。",
+  "blockdesc-tun-text": "  - 此酿酒缸只能放置在酿酒缸架内。",
+  "blockdesc-liquidystuff-text": "  - 谷物、树脂、蜂蜡、动物脂肪<br>食品扩展：<br>  - 所有脱水/干果",
+  "blockdesc-pumpkincase-text": "  - 南瓜。",
+  "blockdesc-fooduniversal-text": "  - 馅饼、奶酪、所有面包类型<br>食品扩展：<br>  - 松饼<br>  - 饺子<br>  - 软面包",
+  "blockdesc-holderuniversal-text": "  - 馅饼、奶酪、所有面包类型、瓦罐和锅<br>食物架：<br>  - 所有篮子<br>食品扩展：<br>  - 水果棒<br>  - 松饼<br>  - 饺子<br>  - 软面包<br>荒野工艺：水果与坚果：<br>  - 所有坚果棒<br>  - 花生酥<br>  - 炸蔬菜丸子<br>  - 杏仁糖膏<br>长期食物：<br>  - 所有肉干<br>  - 压缩肉干<br>  - 蘑菇酱",
 
-  "This item cannot be placed in this container.": "此物品不能放入此容器中。",
-  "Only pies or cheese can be placed on this shelf.": "这个架子上只能放馅饼或奶酪.",
-  "Only bread, muffins, dumplings, pacoca, halva or marzipam can be placed on this shelf.": "这个架子上只能放面包、松饼、饺子、花生酥、炸蔬菜丸子或杏仁膏。",
-  "Only food bars can be placed on this shelf.": "这个架子上只能放食品棒。",
-  "Only sushi can be placed on this shelf.": "这个架子上只能放寿司.",
-  "Only crocks, cooking pots or bowls can be placed on this shelf.": "该架子上只能放置陶罐、烹饪锅或碗.",
-  "Only eggs can be placed on this shelf.": "这个架子上只能放鸡蛋.",
-  "Only seeds can be placed on this shelf.": "该架子上只能放置种子.",
-  "Only fruit can be placed in this basket.": "这个篮子只能放水果.",
-  "Only vegetables can be placed in this basket.": "这个篮子只能放蔬菜.",
-  "Only eggs can be placed in this basket.": "这个篮子里只能放鸡蛋。",
-  "Only barrels can be placed on this rack.": "该架子上只能放置桶.",
+  "helddesc-breadshelf": "放在此架子上的面包保鲜时间延长100%。",
+  "helddesc-barrelrack": "存放在此木桶架中的液体保鲜时间延长50%，熟成速度减慢20%。",
+  "helddesc-tunrack": "存放在此酿酒缸架中的液体保鲜时间延长60%，熟成速度减慢25%。",
+  "helddesc-ceilingjar": "放入吊顶罐的脱水水果干燥或融化速度快2.5倍，保鲜时间延长25%。储存在其中的谷物比储存在储物容器中保鲜时间延长35%。",
+  "helddesc-fooddisplaycase": "放入此展示柜的食物保鲜时间延长25%。",
+  "helddesc-coolingcabinet": "存放在此柜中的食物保鲜时间延长25%，添加冰块后最多可延长70%。<br>请确保保持关闭！",
 
-  "This barrel needs to be placed in a barrel rack.": "这个桶需要放在桶架上.",
-  "The barrel must be emptied before it can be picked up.": "在捡拾之前，必须先将桶中的水倒掉.",
-  "Missing barrel.": "<font color=\"orange\">缺少桶</font>",
+  "This item cannot be placed in this container.": "此物品无法放置在该容器中。",
+  "Only pies or cheese can be placed on this shelf.": "此架子只能放置馅饼或奶酪。",
+  "Only bread, muffins, dumplings, pacoca, halva or marzipam can be placed on this shelf.": "此架子只能放置面包、松饼、饺子、花生酥、炸蔬菜丸子或杏仁糖膏。",
+  "Only food bars can be placed on this shelf.": "此架子只能放置食物棒。",
+  "Only sushi can be placed on this shelf.": "此架子只能放置寿司。",
+  "Only crocks, cooking pots or bowls can be placed on this shelf.": "此架子只能放置瓦罐、烹饪锅或碗。",
+  "Only eggs can be placed on this shelf.": "此架子只能放置鸡蛋。",
+  "Only seeds can be placed on this shelf.": "此架子只能放置种子。",
+  "Only fruit can be placed in this basket.": "此篮子只能放置水果。",
+  "Only vegetables can be placed in this basket.": "此篮子只能放置蔬菜。",
+  "Only eggs can be placed in this basket.": "此篮子只能放置鸡蛋。",
+  "Only barrels can be placed on this rack.": "此架子只能放置木桶。",
+  "Only tuns can be placed on this rack.": "此架子只能放置酿酒缸。",
 
-  "placefailure-requireceilingattachable": "不能将此块放在这里。它必须连接到一个未凿开的块的天花板上。",
+  "This tun needs to be placed in a tun rack.": "此酿酒缸需要放置在酿酒缸架中。",
+  "The barrel must be emptied before it can be picked up.": "木桶必须清空后才能拿起。",
+  "The tun must be emptied before it can be picked up.": "酿酒缸必须清空后才能拿起。",
+  "Missing barrel.": "<font color=\"orange\">缺少木桶。</font>",
+  "Missing tun.": "<font color=\"orange\">缺少酿酒缸。</font>",
 
-  "Contents": "<font color=\"orange\">内容： </font>",
-  "Soonest": "最快:",
+  "placefailure-requireceilingattachable": "无法在此处放置此方块。它必须附着在未雕凿方块的天花板上。",
+
+  "Displaying segment": "<font color=\"#7b7b7b\">显示分段：</font>",
+
+  "Contents": "<font color=\"orange\">内容物：</font>",
+  "Soonest": "最早：",
   "Empty.": "空的。",
-  "short": "短",
-  "veryshort": "非常短",
 
-  "Will melt in {0} years": "将在{0}年后融化",
+  "short": "短",
+  "veryshort": "很短",
+  "top": "顶部",
+
+  "Will melt in {0} years": "将在{0}年内融化",
   "Will melt in {0} days": "将在{0}天内融化",
   "Will melt in {0} hours": "将在{0}小时内融化",
   "Will not melt": "不会融化",
 
-  "will perish in {0} years": "将在{0}年后腐烂",
-  "will perish in {0} days": "将在{0}天后腐烂",
-  "will perish in {0} hours": "将在{0}小时后腐烂",
+  "Will cure in {0} years": "将在{0}年内熟成",
+  "Will cure in {0} days": "将在{0}天内熟成",
+  "Will cure in {0} hours": "将在{0}小时内熟成",
+
+  "Will dry in {0} years": "将在{0}年内晾干",
+  "Will dry in {0} days": "将在{0}天内晾干",
+  "Will dry in {0} hours": "将在{0}小时内晾干",
+
+  "Average freshness {0} years": "平均保鲜期：{0}年",
+  "Average freshness {0} days": "平均保鲜期：{0}天",
+  "Average freshness {0} hours": "平均保鲜期：{0}小时",
+  "will perish in {0} years": "将在{0}年内腐坏",
+  "will perish in {0} days": "将在{0}天内腐坏",
+  "will perish in {0} hours": "将在{0}小时内腐坏",
   "Items inside {0}": "内部物品：{0}",
-  "No item will perish soon.": "任何物品都不会很快腐烂。"
+  "No item will perish soon.": "近期没有物品会腐坏。"
 }
