--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -32,6 +32,7 @@
   "block-glassjar-*": "Glass Jar",
   "block-ceilingjar-*": "Ceiling Jar",
   "block-coolingcabinet-*": "Cooling Cabinet",
+  "block-meatfreezer-*": "Meat Freezer",
 
   "blockdesc-canhold-title": "Can hold:",
   "blockdesc-canbeplacedin-title": "Can be placed in:",
@@ -52,6 +53,7 @@
   "blockdesc-pumpkincase-text": "  -Pumpkins.",
   "blockdesc-fooduniversal-text": "  -Pies, Cheese, all bread types<br>Expanded Foods:<br>  -Muffins<br>  -Dumplings<br>  -Soft bread",
   "blockdesc-holderuniversal-text": "  -Pies, Cheese, all bread types, crocks and pots<br>Food Shelves:<br>  -All baskets<br>Expanded Foods:<br>  -Fruit bars<br>  -Muffins<br>  -Dumplings<br>  -Soft bread<br>Wildcraft: Fruits and Nuts:<br>  -All nut bars<br>  -Pacoca<br>  -Halva<br>  -Marzipam<br>Long-term food:<br>  -All pemmicans<br>  -Packed pemmican<br>  -Mushroom pate",
+  "blockdesc-meatfreezer-text": "  -Most types of raw meat.",
 
   "helddesc-breadshelf": "Bread placed on this shelf stays fresh for 100% longer.",
   "helddesc-barrelrack": "Liquids stored in this barrel rack stay fresh for 50% longer and cure 20% slower.",
@@ -59,6 +61,7 @@
   "helddesc-ceilingjar": "Dehydrated fruit placed in the Ceiling Jar dries or melts 2.5x faster, and stays fresh for 25% longer. Grain stored in it is fresh for 35% longer than in a Storage Vessel.",
   "helddesc-fooddisplaycase": "Food placed in this case stays fresh for 25% longer.",
   "helddesc-coolingcabinet": "Food stored in this cabinet stays fresh 25% longer, or up to 70% longer when ice is added.<br>Make sure to keep it closed!",
+  "helddesc-meatfreezer": "Raw meat stored in this freezer stays fresh 60% longer, or up to 5x longer when ice is added.<br>Make sure to keep it closed!",
 
   "This item cannot be placed in this container.": "This item cannot be placed in this container.",
   "Only pies or cheese can be placed on this shelf.": "Only pies or cheese can be placed on this shelf.",
@@ -73,6 +76,7 @@
   "Only eggs can be placed in this basket.": "Only eggs can be placed in this basket.",
   "Only barrels can be placed on this rack.": "Only barrels can be placed on this rack.",
   "Only tuns can be placed on this rack.": "Only tuns can be placed on this rack.",
+  "Only raw meat can be placed in this freezer.": "Only raw meat can be placed in this freezer.",
 
   "This tun needs to be placed in a tun rack.": "This tun needs to be placed in a tun rack.",
   "The barrel must be emptied before it can be picked up.": "The barrel must be emptied before it can be picked up.",
